--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "R 数据科学 2e （中文版）"
+  title: "R 数据科学 2e\n（中文版）"
   reader-mode: true
 
   page-footer:
